[package]
name = "cf_wasm"
version = "0.1.0"
authors = ["logan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
lazy_static = "1.4.0"
serde_json = "1.0.59"
creature_feature = {git = "https://github.com/Lambda-Logan/creature_feature"}